# saturn

./: .env  .gitignore  Cargo.toml  Makefile  README.md  build_client.sh  build_m1_mac_shit_cum_fart.sh  run.sh  watch.sh
migrations/2021-08-11-030525_template_database/: down.sql  up.sql
src/: lib.rs  main.rs  prelude.rs  schema.rs
src/clientapp/: Cargo.toml  index.html  rustfmt.toml
src/clientapp/.VSCodeCounter/2021-09-17_15-26-42/: details.md  results.csv  results.md  results.txt
src/clientapp/src/: effect.js  flags.rs  main.rs  router.rs  types.rs  wbg.rs
src/clientapp/src/components/: club_card.rs  club_view.rs  clubfilters.rs  google_login_button.rs  home.rs  login.rs  mod.rs  notfound.rs  pg_login.rs  router.rs  search.rs  stellar.rs  three.rs  toolbar.rs
src/clientapp/src/components/clubs/: club_card.rs  club_dialog.rs  club_fab.rs  club_view.rs  dummy_data.rs  mod.rs  pg_details.rs  pg_new_club.rs  search.rs
src/clientapp/src/components/coolshit/: mod.rs  spinner.rs  stellar.rs  three.rs
src/clientapp/src/components/core/: footer.rs  mod.rs  notfound.rs  router.rs  toolbar.rs
src/clientapp/src/components/dialog/: dialog_container.rs  mod.rs
src/clientapp/src/components/login/: google_login_button.rs  home.rs  mod.rs  pg_login.rs
src/clientapp/src/event/: amogus.rs  mod.rs
src/clientapp/src/js/: rotating_vertex_star.js
src/clientapp/src/resources/: animations.scss  bg.js:Zone.Identifier  builtin-selectors.scss  club_fab.scss  club_view.scss  consts.scss  notfound.scss  pg_login.scss  shooting-stars.scss  style.css  style.scss  toolbar.scss
src/controllers/: index.rs  login.rs  mod.rs
src/controllers/auth/: details.rs  login.rs  logout.rs  mod.rs
src/controllers/clubs/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/models/: club_members_md.rs  clubs_md.rs  mod.rs  users_md.rs
threejspg/: package-lock.json  package.json  webpack.config.js
threejspg/src/: entry.js
threejspg/src/objects/: Lights.js  Scene.js
threejspg/src/objects/Star/: PointStar.js  Star.js
