[package]
name = "saturn-client"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.18"
gloo-render = "0.1.0"
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
yew-router = "0.15.0"
anyhow = "1.0.43"
serde = "1.0.129"

[dependencies.chrono]
version = "*"
features = ["serde"]

[profile.release]
debug = true

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]