[package]
name = "saturn-client"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.18"
gloo-render = "0.1.0"
wasm-bindgen = {version = "0.2.76", features = ["serde-serialize"]}
js-sys = "0.3.53"
yew-router = "0.15.0"
anyhow = "1.0.43"
serde = "1.0.129"
serde_json = "*"
lazy_static = "*"
rand = "*"
getrandom = { version = "0.2", features = ["js"] }
ammonia = "*"
comrak = "0.11.0"

[dependencies.regex]
version = "*"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "*"
features = ["serde"]

[profile.release]
debug = true

[dependencies.web-sys]
version = "*"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Document',
  'Window',
  'HtmlCollection',
  'CssStyleDeclaration',
  'DomTokenList',
  'Animation',
  'AnimationEffect',
  'AnimationTimeline',
  'KeyframeEffect'
]